<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setting_budge_title"
            android:id="@+id/tv_budget"
            android:paddingBottom="@dimen/market_list_padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/rg_budget">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_budget_lvl1"
                android:id="@+id/radio_budget_level1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_budget_lvl2"
                android:id="@+id/radio_budget_level2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_budget_lvl3"
                android:id="@+id/radio_budget_level3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setting_emphasis1_title"
            android:id="@+id/tv_emphasis1"
            android:paddingBottom="@dimen/market_list_padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/rg_emphasis1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis1_choice1"
                android:id="@+id/radio_emphasis1_choice1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis1_choice2"
                android:id="@+id/radio_emphasis1_choice2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis1_choice3"
                android:id="@+id/radio_emphasis1_choice3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setting_emphasis2_title"
            android:id="@+id/tv_emphasis2"
            android:paddingBottom="@dimen/market_list_padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/rg_emphasis2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis2_choice1"
                android:id="@+id/radio_emphasis2_choice1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis2_choice2"
                android:id="@+id/radio_emphasis2_choice2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis2_choice3"
                android:id="@+id/radio_emphasis2_choice3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setting_emphasis3_title"
            android:id="@+id/tv_emphasis3"
            android:paddingBottom="@dimen/market_list_padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:id="@+id/rg_emphasis3">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis3_choice1"
                android:id="@+id/radio_emphasis3_choice1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis3_choice2"
                android:id="@+id/radio_emphasis3_choice2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_emphasis3_choice3"
                android:id="@+id/radio_emphasis3_choice3" />

        </RadioGroup>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_title"
            android:id="@+id/save_btn"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@color/ripple"/>

    </LinearLayout>
</ScrollView>